Add purchased field to gifts. Add endpoints to mark gifts as purchased or not
